Closed Bug 21598 Opened 25 years ago Closed 25 years ago

[PP] Chinese (x-euc-tw)in this page is not displayed correctly

Categories

(Core :: Internationalization, defect, P3)

Other
Linux
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: teruko, Assigned: ftang)

References

()

Details

(Whiteboard: fix in local tree)

This page does not displayed correctly. Euc-JP, Shift_jis, big5, euc-kr, and gb2312 pages are displayed correctly. The machine has the right fonts. Tested 12-10-08 and 12-13-08 Linux build. This is the same as 15515 which fixed before, but this happens in Linux only.
Status: NEW → ASSIGNED
Target Milestone: M13
*** Bug 21609 has been marked as a duplicate of this bug. ***
Somehow I foget to change some "X-EUC-TW" into "x-euc-tw". Need to fix /intl/uconv/src/nsCharsetConverterManager.cpp, line 310 -- res = registry -> SetInt(key, "X-EUC-TW", 1); and /intl/uconv/ucvtw2/nsUCvTw2Module.cpp, line 130 -- "X-EUC-TW", /intl/uconv/ucvtw2/nsUCvTw2Module.cpp, line 137 -- "X-EUC-TW" to "x-euc-tw" instead
Whiteboard: fix in local tree
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
change X-EUC-TW to x-euc-tw
Status: RESOLVED → VERIFIED
I verified this in 20000105115 Linux build.
You need to log in before you can comment on or make changes to this bug.