fix bug 21598. r=cata a=chofmann change the internal charset name from X-EUC-TW to x-euc-tw